<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dialogs.RequiredPermissionDialog">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    android:backgroundTint="@color/color_dialog_background"
    android:layout_gravity="center"
    android:layout_margin="40dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_heading"
            style="@style/heading_medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/permission_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_detail_text_first"
            style="@style/text_unactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/location_access_is_required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_heading" />

        <TextView
            android:id="@+id/tv_detail_text_second"
            style="@style/text_unactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_order_to_scan_wifi_it_will_not_track_you_no"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_text_first"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_text_first" />

        <TextView
            android:id="@+id/tv_detail_third"
            style="@style/text_unactive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_your_location_data"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_text_second"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_text_second" />

        <TextView
            android:id="@+id/tv_android"
            style="@style/heading_medium_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="6dp"
            android:layout_marginBottom="24dp"
            android:textColor="@color/green_color"
            android:text="@string/go_to_android_com"
            app:layout_constraintEnd_toStartOf="@+id/tv_ok"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_third"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:textColor="@color/green_color"
            android:text="@string/ok"
            android:textSize="16dp"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="@id/tv_android"
            app:layout_constraintBottom_toBottomOf="@id/tv_android"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

</FrameLayout>