<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_parent"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_permission_first_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_message_first_line"
            android:textSize="@dimen/text_size_small"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_permission_second_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission_message_second_line"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toEndOf="@+id/tv_permission_first_half"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_first_half"
            app:layout_constraintTop_toBottomOf="@id/tv_permission_first_half" />

        <Button
            android:id="@+id/btn_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_content_vertical"
            android:text="@string/allow"
            app:layout_constraintEnd_toEndOf="@+id/tv_permission_second_half"
            app:layout_constraintStart_toStartOf="@+id/tv_permission_second_half"
            app:layout_constraintTop_toBottomOf="@+id/tv_permission_second_half" />

    </androidx.constraintlayout.widget.ConstraintLayout>



