<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.dialogs.ExitDialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/color_dialog_background"
        android:layout_margin="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/heading_medium_text"
                android:textSize="16sp"
                android:layout_marginEnd="16dp"
                />

            <TextView
                android:id="@+id/tv_detail"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:text="@string/are_you_sure_you_want_to_exit"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_exit" />

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginVertical="16dp"
                android:layout_marginEnd="14dp"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/text_unselected_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_ok"
                app:layout_constraintTop_toBottomOf="@id/tv_detail"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:padding="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ok"
                android:textColor="@color/green_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_cancel" />




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>