<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.dialogs.PermissionDialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@color/color_dialog_background"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_permission_"
                style="@style/heading_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/permission"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@drawable/ic_cross"
                app:layout_constraintBottom_toBottomOf="@+id/tv_permission_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_permission_" />

            <ImageView
                android:id="@+id/img_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/permission_dialog_ic"
                android:scaleType="fitXY"
                android:src="@drawable/ic_permission_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_permission_"
                app:layout_constraintTop_toBottomOf="@id/tv_permission_" />

            <TextView
                android:id="@+id/tv_permission_first_half"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/please_allow_wi_fi_analyzer_to_access"
                app:layout_constraintStart_toStartOf="@+id/tv_permission_"
                app:layout_constraintTop_toBottomOf="@id/img_card" />

            <TextView
                android:id="@+id/tv_permission_second_half"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/device_location_for_scanning_wi_fi"
                app:layout_constraintStart_toStartOf="@id/tv_permission_first_half"
                app:layout_constraintTop_toBottomOf="@id/tv_permission_first_half" />

            <TextView
                android:id="@+id/tv_point_one"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="1.   Open settings."
                app:layout_constraintStart_toStartOf="@id/tv_permission_second_half"
                app:layout_constraintTop_toBottomOf="@id/tv_permission_second_half" />

            <TextView
                android:id="@+id/tv_point_two"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="2.   Tap Permissions."
                app:layout_constraintStart_toStartOf="@id/tv_point_one"
                app:layout_constraintTop_toBottomOf="@id/tv_point_one" />

            <TextView
                android:id="@+id/tv_point_three"
                style="@style/text_unactive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="3.   Turn on Location."
                app:layout_constraintStart_toStartOf="@id/tv_point_two"
                app:layout_constraintTop_toBottomOf="@id/tv_point_two" />

            <Button
                android:id="@+id/btn_open_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/green_color"
                android:text="@string/open_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_point_three" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>